--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -34,7 +34,7 @@
 
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
-    extensions: ["tex2jax.js"]
+    extensions: ["tex2jax.js"],
     jax: ["input/TeX", "output/HTML-CSS"],
     tex2jax: {
       inlineMath: [ ['$', '$'], ["\\(", "\\)"] ],
